# icy

./: README.md  cross-changes.patch
icy-esp-client/: README.md  icy-esp-client.ino
icy-esp-client/data/: example.json
icy-pi-client/: Cargo.toml
icy-pi-client/debian/: icy-pi-client.service  icy-pi-client.toml  postinst  postrm  prerm
icy-pi-client/src/: main.rs
icy-server/: .gitignore  Cargo.toml  Cross.toml
icy-server/debian/: icy-server.service  icy-server.toml  postinst  postrm  prerm
icy-server/migrations/2019-07-21-101441_create_sensors/: down.sql  up.sql
icy-server/migrations/2019-07-22-130112_measurements/: down.sql  up.sql
icy-server/src/: db.rs  main.rs  models.rs  mqtt_listener.rs  schema.rs  settings.rs
icy-server/static/: index.tera  style.css
