[package]
name = "icy-pi-client"
description = "Service for reading BME280 temperature sensor values and sending them to MQTT server."
version = "0.1.0"
authors = ["Ukko Sarekoski <ukonvaaja10@gmail.com>"]
edition = "2018"

[dependencies]
bme280 = "0.1.1"
rumqtt = "0.30.1"
linux-embedded-hal = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
config = "0.9"

[package.metadata.deb]
depends = "$auto, systemd"
maintainer-scripts = "debian"
conf-files = [
    "/usr/local/etc/icy-pi-client/icy-pi-client.toml.toml",
    "/etc/systemd/system/icy-pi-server.service"
]
assets = [
    ["target/release/icy-pi-client", "/usr/local/bin/", "755"],
    ["debian/icy-pi-client.service", "/lib/systemd/system/", "644"], 
    ["debian/icy-pi-client.toml", "/usr/local/etc/icy-pi-client/", "644"], 
]
