[package]
name = "icy-server"
version = "0.1.0"
authors = ["Ukko Sarekoski <ukonvaaja10@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.2"
chrono = "0.4"
rumqtt = "0.30.1"
serde_json = "1.0"
openssl = "*"
openssl-probe = "0.1.2"
lazy_static = "1.4.0"
toml = "0.5"
config = "0.9"

[dependencies.diesel]
version = "1.4.2"
features = ["postgres", "chrono"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["tera_templates", "diesel_postgres_pool", "json", "serve"]

[package.metadata.deb]
depends = "$auto, systemd, postgresql"
maintainer-scripts = "debian"
conf-files = [
    "/usr/local/etc/icy-server/icy-server.toml"
]
assets = [
    ["target/release/icy-server", "/usr/local/bin/", "755"],
    ["debian/icy-server.service", "/lib/systemd/system/", "644"], 
    ["debian/icy-server.toml", "/usr/local/etc/icy-server/", "644"], 
    ["static/*", "/usr/local/share/icy-server/", "644"],
]
